// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select chief complaint > returns state with chief complaint deselected 1`] = `{}`;

exports[`select chief complaint > returns state with chief complaint newly selected 1`] = `
{
  "foo": "",
}
`;

exports[`select chief complaint returns state with chief complaint deselected 1`] = `Object {}`;

exports[`select chief complaint returns state with chief complaint newly selected 1`] = `
Object {
  "foo": "",
}
`;

exports[`set notes chief complaints > returns state with misc notes 1`] = `
{
  "foo": "foo1",
}
`;

exports[`set notes chief complaints returns state with misc notes 1`] = `
Object {
  "foo": "foo1",
}
`;
